# logic-turn-based-rpg

./: .gitignore  Cargo.toml  LICENSE  README.md  create_wasm.sh
.github/workflows/: release.yaml
assets/: CaveBackground.ase  Mockup.ase  Stage.ase
assets/3d/: cave.glb  sign.glb  stage.glb
assets/cave/: License.txt
assets/characters/: PlayerIcon.ase
assets/config/: basic_combat.combat.ron  basic_enemy.enemy.ron  basic_enemy2.enemy.ron  sample_room.room.ron
assets/indoor/: License.txt
assets/my_art/: particles.ase  smoke_particles.ase
assets/shaders/: vignette.wgsl
book/: book.toml
book/src/: SUMMARY.md  art.md  assets.md  combat.md  components.md  introduction.md  modules.md  overworld.md  states.md  systems.md
config/: basic_combat.ron  basic_enemy.ron  basic_enemy2.ron  player_overworld.ron
src/: art.rs  combat.rs  lib.rs  main.rs  overworld.rs  utils.rs  weapons.rs
src/art/: animation.rs  fade_in.rs  mod.rs  particles.rs  post_processing.rs  sprite_sheets.rs
src/combat/: animation.rs  attack.rs  graphic_effects.rs  melee.rs  mod.rs  player_wins.rs  selection.rs  start_combat.rs  turn_based.rs  ui.rs  weapons.rs
src/overworld/: enemy.rs  map.rs  mod.rs  npc.rs  player.rs  room.rs  start_combat.rs  walls.rs
