[package]
name = "logic-turn-based-rpg"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = {version = "0.10", features = ["dynamic_linking", "serialize"] }
bevy_rapier2d = "0.21"
bevy-inspector-egui = { version = "0.18.0", default-features = false, features = ["bevy_pbr"] }
egui_dock = "0.4"
egui-gizmo = "0.10"
bevy_easings = "0.10"
bevy_mod_debugdump = "0.7"
rand = "0.8.5"
ron = "0.8.0"
serde = "1.0.136"